# Open-Source-SW-Project5

./: README.md
control/: CMakeLists.txt  package.xml
control/include/: LocalControl.h
control/msg/: control.msg
control/src/: LocalControl.cpp  main.cpp  robot_control.cpp
lidar_detection/: CMakeLists.txt  package.xml
lidar_detection/include/: Cluster.h  Scan2PCL.h
lidar_detection/launch/: sensor_view.launch
lidar_detection/msg/: lidar.msg
lidar_detection/rviz/: sensor_view.rviz
lidar_detection/src/: Cluster.cpp  Scan2PCL.cpp  lidar_detect.cpp  main.cpp
